Update Java version to 17, Dozer to 7.0.0, ModelMapper to 3.26, Orika to 1.6.0